sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '=' expected but ';' found.
  while (sorted==false){
^