sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var sorted:=false
  while (sorted==false){
    for (k <-0 to getNombreValeurs()-2){
      if (plusPetit(k+1,k)){
        echange(k,k+1)
      }
      else {sorted=true}  
      
    }
    
  }
}